# CATS-Contextual-Ambiguity-Trust-Scoring

./: .env.example  .gitignore  .pre-commit-config.yaml  CATS_WhitePaper_Tecnico_v1.0.docx  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-bert.txt  requirements-dev.txt  requirements-sbert.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_tenant_id.py
cats/: __init__.py
cats-github-final/cats-github/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cats-github-final/cats-github/alembic/: env.py
cats-github-final/cats-github/alembic/versions/: 0001_initial_schema.py
cats-github-final/cats-github/cats/api/: main.py
cats-github-final/cats-github/cats/api/routes/: evaluate.py
cats-github-final/cats-github/cats/core/: db.py  security.py
cats-github-final/cats-github/cats/pipeline/: normalizer.py
cats-github-final/cats-github/cats/scoring/: weights.py
cats-github-final/cats-github/cats/signals/: coherence.py  gaming.py  silence.py  volatility.py
cats-github-final/cats-github/docs/: compliance.md
cats-github-final/cats-github/nginx/: nginx.conf
cats-github-final/cats-github/tests/: conftest.py
cats-github-final/cats-github/tests/integration/: test_api.py
cats-github-final/cats-github/tests/unit/: test_pipeline.py  test_scoring.py  test_signals.py
cats/api/: __init__.py  main.py  schemas.py
cats/audit/: __init__.py  logger.py
cats/calibration/: __init__.py  __main__.py  build_dataset.py  calibrate.py  collect_rss.py  dataset.py  evaluate.py  ga.py  label_from_ratings.py  objective.py  report.py  split.py
cats/core/: __init__.py  config.py  db.py  metrics.py  models.py  security.py
cats/pipeline/: __init__.py  normalizer.py
cats/scoring/: __init__.py  engine.py  explainer.py  weights.py
cats/signals/: __init__.py  coherence.py  gaming.py  sentiment.py  silence.py  types.py  volatility.py
data/: Fonti_OSINT.csv  README.md  labels.jsonl  ratings.csv  ratings_provenance.csv
deploy/: nginx.conf
docs/: api.md  architecture.md  calibration.md  compliance.md
docs/eu_ai_act/: README.md  annex_iv_technical_documentation.md  classification.md  data_governance_art10.md  risk_management_art9.md
examples/: calibration_sample.jsonl  labelled_sources_sample.jsonl
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_build_dataset.py  test_calibration.py  test_collect_rss.py  test_evaluate.py  test_explainer.py  test_label_from_ratings.py  test_normalizer.py  test_report.py  (+6 more)
(+1 files in other folders)
