[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cats"
version = "1.0.0"
description = "Contextual Ambiguity & Trust Scoring — trust intelligence for OSINT sources"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
