[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cats"
version = "1.0.0"
description = "Contextual Ambiguity & Trust Scoring — source reliability for OSINT"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["osint", "trust", "scoring", "nlp", "disinformation", "media-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "spacy==3.7.2",
    "textblob==0.18.0",
    "cryptography==42.0.0",
    "structlog==24.1.0",
    "apscheduler==3.10.4",
    "prometheus-client==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "black==24.1.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "pre-commit==3.6.0",
]

[project.urls]
Homepage = "https://github.com/cats-project/cats"
Issues = "https://github.com/cats-project/cats/issues"
Documentation = "https://github.com/cats-project/cats/tree/main/docs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
